--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-save-html-to-pdf": "^1.3.2",
+    "highcharts": "^10.1.0",
+    "highcharts-angular": "^3.0.0",
+    "ngx-print": "^1.2.1",
+    "ngx-printer": "^1.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
